# edu_platform

проект гит/Group-project-2023/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
проект гит/Group-project-2023/edu_platform/: manage.py  mixins.py
проект гит/Group-project-2023/edu_platform/edu_platform/: asgi.py  settings.py  urls.py  wsgi.py
проект гит/Group-project-2023/edu_platform/mentorship/: managers.py  models.py
проект гит/Group-project-2023/edu_platform/mentorship/migrations/: 0001_create_user.py  0002_create_teacher_and_specialization.py  0003_create_model_student.py  0004_creat_group_model.py
проект гит/Group-project-2023/edu_platform/testing_system/: apps.py  models.py
проект гит/Group-project-2023/edu_platform/testing_system/migrations/: 0001_create_course_model.py
